<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:title="@string/io">
        <menu>
            <item
                android:id="@+id/load_products"
                android:title="@string/load" />
            <item
                android:id="@+id/save_products"
                android:title="@string/save" />
        </menu>
    </item>
    <item android:title="@string/search">
        <menu>
            <item
                android:id="@+id/search"
                android:title="@string/search_by_name" />
            <item
                android:id="@+id/search_with_price"
                android:title="@string/search_by_name_and_price" />
        </menu>
    </item>
    <item
        android:id="@+id/crud_menu"
        android:title="@string/actions"
        >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <item
                android:id="@+id/get_all"
                android:title="@string/get_all" />
            <item
                android:id="@+id/create_product"
                android:title="@string/create" />
            <item
                android:id="@+id/update_product"
                android:title="@string/update" />
            <item
                android:id="@+id/delete_product"
                android:title="@string/delete" />
        </menu>
    </item>
    <item
        android:id="@+id/theme_menu"
        android:title="@string/theme"
        >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <item
                android:id="@+id/default_theme"
                android:title="@string/default_theme" />
            <item
                android:id="@+id/red_theme"
                android:title="@string/red" />
            <item
                android:id="@+id/green_theme"
                android:title="@string/green" />
        </menu>
    </item>
</menu>