<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConstrainedSearch">

    <Button
        android:id="@+id/constrainedSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPriceInput" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:labelFor="@+id/nameInput" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/search_by_name_and_max_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/max_price"
        app:layout_constraintEnd_toStartOf="@+id/maxPriceInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:labelFor="@+id/maxPriceInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/maxPriceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>